News App - with React Query
- Category.js fixes on Card click
- Working on ArticleContainer.js
- Translations react-intl
- Adding react-icons

--- a/src/js/i18n/de.json
+++ b/src/js/i18n/de.json
@@ -6,5 +6,11 @@
   "languageMenu.english": "Englisch",
   "languageMenu.german": "Deutsch",
 
+  "countryMenu.GB": "GB",
+  "countryMenu.US": "US",
+
+  "article.backLink": "Zurück",
+  "article.fullArticle": "Vollständiger Artikel",
+
   "error.message": "Nachrichten können im Moment nicht geladen werden, bitte versuchen Sie es später noch einmal"
 }
